course-app-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
  labels:
    app: course-app
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
      - name: course-app
        image: lvv77/course-app:v7.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: course-app.192.168.49.2.lvv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service
            port:
              number: 80
