tls_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - course-app.192.168.49.2.lvv.io 
    secretName: course-app-tls
  rules:
  - host: course-app.192.168.49.2.lvv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service
            port:
              number: 80
